airflow/logs/dag_id=nba_transform_to_dwh/run_id=manual__2025-06-19T113932.893201+0000/task_id=fetch_dim_team_from_transform_and_load/attempt=1.log
[2025-06-19T11:39:34.027+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-06-19T11:39:34.177+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: nba_transform_to_dwh.fetch_dim_team_from_transform_and_load manual__2025-06-19T11:39:32.893201+00:00 [queued]>
[2025-06-19T11:39:34.241+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: nba_transform_to_dwh.fetch_dim_team_from_transform_and_load manual__2025-06-19T11:39:32.893201+00:00 [queued]>
[2025-06-19T11:39:34.244+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-06-19T11:39:34.697+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): fetch_dim_team_from_transform_and_load> on 2025-06-19 11:39:32.893201+00:00
[2025-06-19T11:39:34.712+0000] {standard_task_runner.py:63} INFO - Started process 2569 to run task
[2025-06-19T11:39:34.720+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'nba_transform_to_dwh', 'fetch_dim_team_from_transform_and_load', 'manual__2025-06-19T11:39:32.893201+00:00', '--job-id', '118', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp2ycrpbwp']
[2025-06-19T11:39:34.724+0000] {standard_task_runner.py:91} INFO - Job 118: Subtask fetch_dim_team_from_transform_and_load
[2025-06-19T11:39:34.900+0000] {task_command.py:426} INFO - Running <TaskInstance: nba_transform_to_dwh.fetch_dim_team_from_transform_and_load manual__2025-06-19T11:39:32.893201+00:00 [running]> on host 11d91b3c2b82
[2025-06-19T11:39:35.129+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='nba_transform_to_dwh' AIRFLOW_CTX_TASK_ID='fetch_dim_team_from_transform_and_load' AIRFLOW_CTX_EXECUTION_DATE='2025-06-19T11:39:32.893201+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-19T11:39:32.893201+00:00'
[2025-06-19T11:39:35.130+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-06-19T11:39:35.167+0000] {logging_mixin.py:188} WARNING - /opt/***/dags/etl_pipeline.py:626 UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
[2025-06-19T11:39:35.181+0000] {logging_mixin.py:188} INFO - Failed to load data into dimteam: syntax error at or near "PRIMARY"
LINE 3:         teamid PRIMARY KEY,
                       ^
[2025-06-19T11:39:35.182+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-06-19T11:39:35.182+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 646, in fetch_dim_team
    cursor.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near "PRIMARY"
LINE 3:         teamid PRIMARY KEY,
                       ^

[2025-06-19T11:39:35.199+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=nba_transform_to_dwh, task_id=fetch_dim_team_from_transform_and_load, run_id=manual__2025-06-19T11:39:32.893201+00:00, execution_date=20250619T113932, start_date=20250619T113934, end_date=20250619T113935
[2025-06-19T11:39:35.244+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 118 for task fetch_dim_team_from_transform_and_load (syntax error at or near "PRIMARY"
LINE 3:         teamid PRIMARY KEY,
                       ^
; 2569)
[2025-06-19T11:39:35.303+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-06-19T11:39:35.328+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-06-19T11:39:35.362+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
